--- a/src/main/resources/css/cf-badge.css
+++ b/src/main/resources/css/cf-badge.css
@@ -1,6 +1,6 @@
 .cf-badge{
     -fx-alignment: center;
-    -fx-padding: 0px;
+    -fx-padding: 0px 2px;
     -fx-text-fill: rgb(255,255,255);
     -fx-font-size: 12px;
     -fx-pref-height: 15px;
