修改登录背景图片

--- a/src/main/resources/css/project/home.css
+++ b/src/main/resources/css/project/home.css
@@ -4,27 +4,6 @@
     -fx-border-width: 0 1px 0 0;
     -fx-border-color: -cf-border-color;
 }
-/*搜索框*/
-.search-box{
-    -fx-padding: 10px 15px;
-}
-.search-label{
-    -fx-min-height: 40px;
-    -fx-background-color: rgba(0,0,0,0.05);
-    -fx-background-radius: 3px;
-    -fx-border-color: -cf-border-color;
-    -fx-border-radius: 3px;
-    -fx-font-size: 14px;
-    -fx-pref-height: 30px;
-    -fx-font-weight: bold;
-    -fx-text-fill: -cf-text-color;
-    -fx-alignment: center;
-    -fx-cursor: text;
-}
-.search-label > .ikonli-font-icon{
-    -fx-icon-size: 20px;
-    -fx-icon-color: -cf-text-color;
-}
 /*导航栏Item样式*/
 .nav-item{
     -fx-pref-height: 40px;
@@ -56,8 +35,6 @@
     -fx-background-insets: 0px;
     -fx-background-color:transparent;
     -fx-padding:5px 0 5px 0;
-    -fx-border-color: -cf-border-color transparent -cf-border-color transparent;
-    -fx-border-width: 1px 0 1px 0;
 }
 .menu .scroll-bar{
     -fx-opacity:0;
@@ -85,7 +62,7 @@
 }
 /* 用户信息 */
 .user-box{
-    -fx-background-color: rgba(0,0,0,0.1);
+    /*-fx-background-color: rgba(0,0,0,0.1);*/
     -fx-alignment: center;
     -fx-padding: 8px 15px;
     -fx-spacing: 10px;
