--- a/src/main/resources/css/project/aside.css
+++ b/src/main/resources/css/project/aside.css
@@ -35,7 +35,7 @@
 .nav-item > .name-label{
     -fx-font-size: 14px;
     -fx-pref-height: 30px;
-    -fx-font-weight: bold;
+    -fx-font-weight: bolder;
     -fx-text-fill: derive(-cf-text-color,30%);
 }
 .nav-item:hover > .name-label{
