修改 打包方式

--- a/src/main/resources/css/cf-drawer.css
+++ b/src/main/resources/css/cf-drawer.css
@@ -13,3 +13,7 @@
     -fx-icon-size: 16px;
     -fx-icon-color: -cf-text-color;
 }
+.main .close:hover > .ikonli-font-icon{
+    -fx-icon-size: 16px;
+    -fx-icon-color: -cf-primary-color;
+}
