--- a/src/main/resources/css/project/user-detail.css
+++ b/src/main/resources/css/project/user-detail.css
@@ -3,16 +3,6 @@
     -fx-spacing: 15px;
     -fx-alignment: center;
 }
-.name-label, .email-label{
-    -fx-text-fill: -cf-text-color;
-}
-.email-label{
-    -fx-font-size: 14px;
-}
-.name-label{
-    -fx-font-size: 15px;
-    -fx-font-weight: bold;
-}
 .introduction-label{
     -fx-font-size: 13px;
     -fx-text-fill: derive(-cf-text-color,50%);
@@ -27,4 +17,7 @@
     -fx-background-color: transparent;
     -fx-padding: 0;
     -fx-cursor:hand;
+}
+.button-box > .button:hover{
+    -fx-opacity:0.8;
 }
