--- a/src/main/resources/css/cf-radio-button.css
+++ b/src/main/resources/css/cf-radio-button.css
@@ -1,13 +1,24 @@
 .cf-radio-button{
-
-}
-.cf-radio-button{
     -fx-pref-width: 20px;
     -fx-pref-height: 20px;
+}
+.cf-radio-button > .radio{
     -fx-background-radius: 10px;
     -fx-background-insets: 0;
-    -fx-background-color: rgba(0,0,0,0.1);
+    -fx-background-color: rgba(0,0,0,0.05);
+    -fx-border-color: -cf-border-color;
+    -fx-border-radius: 10px;
 }
-.cf-radio-button:selected{
+.cf-radio-button > .radio > .dot{
+    -fx-max-width: 12px;
+    -fx-max-height: 12px;
+    -fx-background-radius: 6px;
+    -fx-background-insets: 0;
+    -fx-background-color: transparent;
+}
+.cf-radio-button:selected > .radio{
+    -fx-border-color: -cf-primary-color;
+}
+.cf-radio-button:selected > .radio > .dot{
     -fx-background-color: -cf-primary-color;
 }
